added our plants section with mobile responsiv

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <title>Assaignment-02</title>
     
 </head>
-<body>
+
+<body class="font-inter">
     <!-- Header section  -->
-    <header class="font-noto-serif">
+    <header>
         <nav class="navber font-inter">
             <img src="./assets/logo.png" alt="">
             <ul>
@@ -42,16 +43,86 @@
         </nav>
         <div class=" banner flex items-end mt-[120px]">
             <div class="banner-content">
-                <h1 class="banner-title">ALWAYS <span class="text-color">FRESH <br> FLOWERS</span></h1>
-                <p class="font-inter banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <h1 class="banner-title font-noto-serif">ALWAYS <span class="text-color">FRESH <br> FLOWERS</span></h1>
+                <p class=" banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <img src="./assets/hero-flower.png" alt="" class="w-auto">
         </div>
     </header>
 
     <!-- main section start from hear -->
-    <main>
-        
+    <main class=" max-w-[1140px] m-auto">
+        <!-- plant section  -->
+        <section class="plants mt-[120px]">
+            <h1 class="plants-title font-noto-serif text-center"><span class="text-color">Our</span> Plants</h1>
+            <p class="plants-description text-center mb-[50px] max-w-[800px] m-auto">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="cards grid grid-cols-4 gap-x-[20px] gap-y-[30px]">
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+                <div class="card border border-gray-300">
+                    <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
+                    <div class="text-center m-[30px]">
+                        <h4 class="font-medium text-[22px]">Lily Blossom</h4>
+                        <h4 class="font-bold text-[22px]">20 USD</h4>
+                    </div>
+                    <button class="btn-primary w-full h-auto text-white font-semibold">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
