--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="cards grid grid-cols-4 gap-x-[20px] gap-y-[30px]">
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="card border border-gray-300">
                     <img src="./assets/sample-flower-image.png" alt="" class="w-full h-auto">
-                    <div class="text-center m-[30px]">
+                    <div class="card-name text-center m-[30px]">
                         <h4 class="font-medium text-[22px]">Lily Blossom</h4>
                         <h4 class="font-bold text-[22px]">20 USD</h4>
                     </div>
@@ -123,6 +123,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- Plants Lover Section -->
+
     </main>
     <footer></footer>
 
