added plants lover section with mobile responsive

--- a/index.html
+++ b/index.html
@@ -125,9 +125,55 @@
         </section>
 
         <!-- Plants Lover Section -->
+        <section class="plants-lover mt-[200px] flex gap-[60px] items-center">
+            <div class="w-full relative inline-block">
+                <img src="./assets/trusted-badge.png" alt="" class="badge w-[45%] h-auto absolute ">
+                <img src="./assets/flower-store.png" alt="" class="w-full h-auto block ">
+            </div>
+            <div class="plants-lover-content w-full">
+                <h1 class="plants-lover-title font-noto-serif font-bold text-5xl ">Flower & Plants <br> Lover</h1>
+                <ul class=" list-disc pl-5 mt-5">
+                    <li class="text-[22px] mb-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="text-[22px] mb-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="text-[22px] mb-5">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
 
+        <!-- Latest Deal Section -->
+        <section class="larest-deal">
+            <h1 class="latest-deal-title font-noto-serif font-bold text-5xl text-center mt-32 mb-4"><span class="text-color">Latest</span> Deals</h1>
+            <p class="latest-deal-description max-w-[800px] m-auto text-center text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="img-container mt-[80px] grid grid-cols-3 gap-7">
+                <div class="left-site-img flex flex-col gap-7">
+                    <div class="relative">
+                        <img src="./assets/deal-bloom.png" alt="" class="brightness-50 rounded-3xl w-full h-auto">
+                        <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center">
+                            <h2 class="font-noto-serif font-bold text-[20px]">60% Off | Bloom Plant</h2>
+                            <p class="font-semibold text-[16px] underline">Shop Now</p>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <img src="./assets/deal-ana.png" alt="" class="brightness-50 rounded-3xl w-full h-auto">
+                        <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center">
+                            <h2 class="font-noto-serif font-bold text-[20px]">30% Off | Ana  Plant</h2>
+                            <p class="font-semibold text-[16px] underline">Shop Now</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-site-img col-span-2 relative">
+                    <img src="./assets/deal-zabo.png" alt="" class="brightness-50 rounded-3xl w-full h-auto">
+                    <div class="absolute inset-0 flex flex-col justify-center items-center text-white text-center">
+                        <h2 class="font-noto-serif font-bold text-[40px]">25% Off | Zabo Plant</h2>
+                        <p class="font-semibold text-[28px] underline">Shop Now</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 
 </body>
 </html>
