added join section with responsive

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </header>
 
     <!-- main section start from hear -->
-    <main class=" max-w-[1140px] m-auto">
+    <main>
         <!-- plant section  -->
-        <section class="plants mt-[120px]">
+        <section class="plants max-w-[1140px] m-auto mt-[120px]">
             <h1 class="plants-title font-noto-serif text-center"><span class="text-color">Our</span> Plants</h1>
             <p class="plants-description text-center mb-[50px] max-w-[800px] m-auto">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             <div class="cards grid grid-cols-4 gap-x-[20px] gap-y-[30px]">
@@ -125,7 +125,7 @@
         </section>
 
         <!-- Plants Lover Section -->
-        <section class="plants-lover mt-[200px] flex gap-[60px] items-center">
+        <section class="plants-lover max-w-[1140px] m-auto mt-[200px] flex gap-[60px] items-center">
             <div class="w-full relative inline-block">
                 <img src="./assets/trusted-badge.png" alt="" class="badge w-[45%] h-auto absolute ">
                 <img src="./assets/flower-store.png" alt="" class="w-full h-auto block ">
@@ -141,7 +141,7 @@
         </section>
 
         <!-- Latest Deal Section -->
-        <section class="larest-deal">
+        <section class="latest-deal max-w-[1140px] m-auto">
             <h1 class="latest-deal-title font-noto-serif font-bold text-5xl text-center mt-32 mb-4"><span class="text-color">Latest</span> Deals</h1>
             <p class="latest-deal-description max-w-[800px] m-auto text-center text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             <div class="img-container mt-[80px] grid grid-cols-3 gap-7">
@@ -170,9 +170,20 @@
                 </div>
             </div>
         </section>
+
+        <!-- Join Section -->
+        <section class=" join-section max-w-[1440px] m-auto text-center mt-[120px] bg-im flex flex-col justify-center items-center gap-6">
+            <h1 class="join-section-title font-noto-serif font-bold text-5xl text-white">Join the colorful Bunch</h1>
+            <div class="input-field mt-6 h-12 flex" >
+                <input type="email" placeholder="Write Email" class="h-full w-[600px] p-4 mr-[-5px] text-black bg-white">
+                <button class="bg-[#E95A08] p-[12px] font-semibold text-white text-center">Subscribe</button>
+            </div>
+        </section>
     </main>
-    <footer>
-        
+
+    <!-- footer part  -->
+    <footer class="max-w-[1440px] m-auto ">
+
     </footer>
 
 </body>
