--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
     <!-- tailwind css  -->
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="styles/tailwind.css">
 
     <!-- css file link  -->
     <link rel="stylesheet" href="styles/style.css">
@@ -182,8 +183,37 @@
     </main>
 
     <!-- footer part  -->
-    <footer class="max-w-[1440px] m-auto ">
-
+    <footer class="max-w-[1440px] m-auto bg-white">
+        <div class="footer-content grid grid-cols-5 max-w-[79%] m-auto mt-12 mb-12">
+            <div class="footer-logo lg:col-span-2 pr-6">
+                <img src="./assets/logo.png" alt="">
+                <p class="mt-4 ">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div>
+                <ul class="flex flex-col gap-7">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">F&Q</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="flex flex-col gap-7">
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="flex gap-4">
+                <img src="./assets/icon-linkedin.png" alt="" class="w-9 h-9" >
+                <img src="./assets/icon-facebook.png" alt="" class="w-9 h-9" >
+                <img src="./assets/icon-twitter.png" alt=""  class="w-9 h-9" >
+                <img src="./assets/icon-youtube.png" alt=""  class="w-9 h-9" >
+            </div>
+        </div>
     </footer>
 
 </body>
